--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ script:
     - ./validate.sh
     - npm run lint:check
     - npm run build
+after_success:
+    - ./comment.sh
 deploy:
     provider: pages
     skip-cleanup: true
