--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,11 @@ node_js:
 sudo: false
 cache: npm
 script:
+    - ./validate.sh
     - npm run lint:check
     - npm run build
+after_success:
+    - ./comment.sh
 deploy:
     provider: pages
     skip-cleanup: true
