--- a/package.json
+++ b/package.json
@@ -6,19 +6,18 @@
     "license": "MIT",
     "scripts": {
         "build": "rollup -c",
-        "lint:js": "prettier --parser typescript \"ui/*.js\"",
-        "lint:yml": "prettier --parser yaml \"*.{yml,yaml}\"",
-        "lint": "npm run lint:js -- --write && npm run lint:yml -- --write",
-        "lint:check": "npm run lint:js -- --check && npm run lint:yml -- --check"
+        "prettier": "prettier \"*.{yml,yaml}\" \"ui/*.js\"",
+        "lint": "npm run prettier -- --write",
+        "lint:check": "npm run prettier -- --check"
     },
     "dependencies": {},
     "devDependencies": {
-        "prettier": "^1.16.4",
-        "rollup": "^1.2.3",
-        "rollup-plugin-commonjs": "^9.2.1",
-        "rollup-plugin-cpy": "^1.1.0",
-        "rollup-plugin-node-resolve": "^4.0.1",
-        "swagger-ui-dist": "^3.20.8"
+        "prettier": "^1.18.2",
+        "rollup": "^1.16.6",
+        "rollup-plugin-commonjs": "^10.0.1",
+        "rollup-plugin-cpy": "^2.0.0",
+        "rollup-plugin-node-resolve": "^5.2.0",
+        "swagger-ui-dist": "^3.23.0"
     },
     "prettier": {
         "singleQuote": true,
