--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "scripts": {
         "build": "rollup -c",
-        "prettier": "prettier \"*.{yml,yaml}\" \"ui/*.js\"",
+        "prettier": "prettier \"*.{yml,yaml,md}\" \"ui/*.{js,html}\"",
         "lint": "npm run prettier -- --write",
         "lint:check": "npm run prettier -- --check"
     },
